
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
__attribute__((used)) static inline float distance(float x, float y, int band)
{

    float tmp = x - y;
    return tmp * tmp;
}
